--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -329,6 +329,16 @@ main {
                         /*Login*/
   /*-----------------------------------------------------*/
 
+  /* Adicione isso ao seu arquivo CSS */
+
+.foto-perfil {
+    width: 100px; /* Ajuste o tamanho conforme necessário */
+    height: 100px;
+    border-radius: 50%; /* Faz a imagem ser redonda */
+    object-fit: cover; /* Garante que a imagem se ajuste bem ao tamanho */
+    margin-top: 10px; /* Adiciona um espaço acima da imagem */
+  }
+  
 .formulario-login {  
     width: 350px;
     height: 500px;
@@ -443,3 +453,4 @@ top: 30px;
     }
     
 }
+
